# DevStateCollector

./: Collector  Collector.cpp  DevInfoColl  DevInfoColl.cpp  Makefile  MavRunner  MavRunner.cpp  runner  runner.cpp
dbus_client/ModemMangerCollector/: Makefile  ModemManagerCollector  ModemManagerCollector.cpp
dbus_client/dbus_arch/: CMakeLists.txt  README.md
dbus_client/dbus_arch/dbus/: CustomTarget-introspection.xml  CustomTarget.conf.in  dbus_service.xml
dbus_client/dbus_arch/include/: dbus_service.h
dbus_client/dbus_arch/src/: dbus_service.cpp  main.cpp
dbus_client/dbus_implemtation_code/: CMakeLists.txt  Makefile  server  server.cpp  verifier  verifier.cpp
dbus_client/info/: dbus  dbus_services_info.txt  service_collector.sh  systemd_info.txt  systemd_unit_info.txt
dbus_client/system_collector/: Makefile  ModemMangerService.txt  battery_stats  battery_stats.cpp  dbus_client  dbus_client.cpp  proc_stats  proc_stats.cpp  systemd_info  systemd_info.cpp
